2007-10-14  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/resmgr.hxx:
	* source/ui/resmgr.cxx: more file parser code & renamed some functions.
	
	* source/inc/unoglobal.hxx:
	* source/ui/unoglobal.cxx: asciiAny added & more const correctness.
	
	* source/service/service.cxx: function name change.

	* workben/addon_pkg/translation/en-US.txt: added Japanese text to test
	UTF-8 parsing.

2007-10-14  Kohei Yoshida  <kyoshida@novell.com>

	* README: changed instruction to skip running configure after 
	autogen.sh & removed the note about the configure script not checking
	the paths because it does now.
	
	* workben/addon_pkg/autogen.sh: run configure automatically.
	
	* workben/addon_pkg/configure.ac: added testing for paths given to the
	autogen.sh script.

2007-10-14  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/resmgr.hxx:
	* source/ui/resmgr.cxx:	
	* source/ui/makefile.mk: added a new class (StringResMgr) to manually 
	handle locale translation strings using UNO API.
	
	* source/inc/solver.hxx:
	* source/service/service.cxx: added hook to test the string manager.

	* workben/addon_pkg/description.xml: description file for the extension
	so that the package has a unique identifier (org.go-oo.CalcSolver).
	
	* workben/addon_pkg/Makefile.in: include additional files within the 
	extension package.
	
	* workben/addon_pkg/translation/en-US.txt: dummy translation text for
	testing.

2007-10-13  Kohei Yoshida  <kyoshida@novell.com>

	* README: added a few notes about the configure script for building 
	scsolver as an add-on.

2007-10-11  Laurent Godard  <lgodard@indesko.com>

	* source/ui/scsolver.src: added French translation.

2007-10-10  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/scsolver.src: changed two dialog strings per Lutz Hoeger's 
	suggestion.

2007-08-12  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/configure.ac: replace the leading '~' with
	$(HOME) in file path.

2007-08-12  Kohei Yoshida  <kyoshida@novell.com>
