@@ -1,0 +1,5 @@
+# SolverDialog strings
+0.SolverDialog.HelpText=
+1.SolverDialog.Title=Optimization Solver
+2.SolverDialog.btnClose.HelpText===
+3.SolverDialog.btnClose.Label=Close
