@@ -1,0 +1,5 @@
+# SolverDialog strings
+0.SolverDialog.HelpText=
+1.SolverDialog.Title=線形ソルバー
+2.SolverDialog.btnClose.HelpText=
+3.SolverDialog.btnClose.Label=閉じる # このコメントはどうなるんだろう？
