@@ -1,3 +1,12 @@
+2007-10-15  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/resmgr.hxx:
+	* source/ui/resmgr.cxx: added code to parse the dialog properties files.
+	
+	* workben/addon_pkg/translation/SolverDialog_en_US.properties:
+	* workben/addon_pkg/translation/SolverDialog_ja_JP.properties: added 
+	test translation files.
+
 2007-10-14  Kohei Yoshida  <kyoshida@novell.com>
 
 	* source/inc/resmgr.hxx:
